@startuml
@startuml
abstract Modificador{
#unidad: Unidad
+aplicarModificador(puntaje: Puntaje): Puntaje
+aplicarEfectoClima(puntaje: Puntaje , valor: Int): void
+esVulnerableAEspeciales(): Boolean
+aplicarMultiplicacion(puntaje: Puntaje, multiplicador: Int): void
+aplicarSuma(puntaje: Puntaje, suma:Int): void
}
class Espia{
+aplicarModificador():void
}
class Medico{
-jugador: Jugador
-descripcion: String
+aplicarModificador(): Void
}
class Agil{
+aplicarModificador():void
}

class Legendaria{}
class Unida{}
class SinModificador{}
class MoraleBoostMod{}
Modificador <|-- Espia
Modificador <|.. Medico
Modificador <|.. Agil
Modificador <|.. Legendaria
Modificador <|.. Unida
Modificador <|.. SinModificador
Modificador <|.. MoraleBoostMod
@enduml

@enduml